--- a/aspnet-core/src/AnvuEcommerce.DbMigrator/appsettings.json
+++ b/aspnet-core/src/AnvuEcommerce.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=AnvuEcommerce;Trusted_Connection=True"
+    "Default": "Server=THIEPVU\\SQLEXPRESS;Database=AnvuEcommerce;Trusted_Connection=True"
   },
   "OpenIddict": {
     "Applications": {
