--- a/angular/package.json
+++ b/angular/package.json
@@ -34,6 +34,7 @@
     "primeicons": "6.0.1",
     "primeng": "^14.2.2",
     "prismjs": "1.9.0",
+    "quill": "^1.3.7",
     "rxjs": "7.5.6",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
