--- a/aspnet-core/src/AnvuEcommerce.Admin.Application.Contracts/AnvuEcommerce.Admin.Application.Contracts.csproj
+++ b/aspnet-core/src/AnvuEcommerce.Admin.Application.Contracts/AnvuEcommerce.Admin.Application.Contracts.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="Abp" Version="8.0.0" />
+    <PackageReference Include="Volo.Abp.FluentValidation" Version="6.0.1" />
     <PackageReference Include="Volo.Abp.ObjectExtending" Version="6.0.1" />
     <PackageReference Include="Volo.Abp.Account.Application.Contracts" Version="6.0.1" />
     <PackageReference Include="Volo.Abp.Identity.Application.Contracts" Version="6.0.1" />
