--- a/aspnet-core/src/AnvuEcommerce.AuthServer/Properties/launchSettings.json
+++ b/aspnet-core/src/AnvuEcommerce.AuthServer/Properties/launchSettings.json
@@ -11,7 +11,7 @@
   
     "AnvuEcommerce.AuthServer": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "https://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
